# apibc

./: CMakeLists.txt  LICENSE  README.md
include/backend/: canonical.hpp  json.hpp  json_schema.hpp  xml.hpp  yaml.hpp
include/core/: intepreter.hpp
include/core/apib/: apib.hpp  apib_fusion.hpp
include/core/elements/: elements.hpp
include/core/mson/: mson.hpp  mson_fusion.hpp
include/parser/: apib_parser.hpp
include/parser/apib/grammar/: document.hpp  keywords.hpp  uri_template.hpp
src/: main.cpp
src/backend/: canonical.cpp  json.cpp  json_schema.cpp  xml.cpp  yaml.cpp
test/_fixtures/: meta-named.apib  section-reserved-in-name.apib
